<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.CharacterDetailsActivity">

    <!-- TOOLBAR -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:title="Movie Details"
        app:titleCentered="true"
        app:titleTextColor="@color/black"
        app:titleTextAppearance="@style/ToolbarTitleText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- MAIN PROGRESS -->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/detail_prog_indicator"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone"
        app:indicatorSize="48dp"
        app:trackThickness="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- IMAGE CONTAINER -->
    <FrameLayout
        android:id="@+id/image_container"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- IMAGE -->
        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <!-- EPISODE COUNT -->
        <TextView
            android:id="@+id/episode_count"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="top|end"
            android:layout_margin="12dp"
            android:background="@drawable/bg_episode_count_circle"
            android:gravity="center"
            android:text="0"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

    </FrameLayout>

    <!-- NAME -->
    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_name_label"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/image_container"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/movie_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        app:layout_constraintTop_toTopOf="@id/label_name"
        app:layout_constraintBottom_toBottomOf="@id/label_name"
        app:layout_constraintStart_toEndOf="@id/label_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- STATUS -->
    <TextView
        android:id="@+id/label_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_label"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/label_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/movie_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        app:layout_constraintTop_toTopOf="@id/label_status"
        app:layout_constraintBottom_toBottomOf="@id/label_status"
        app:layout_constraintStart_toEndOf="@id/label_status"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- SPECIES -->
    <TextView
        android:id="@+id/label_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/species_gender"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/label_status"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/movie_species_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        app:layout_constraintTop_toTopOf="@id/label_species"
        app:layout_constraintBottom_toBottomOf="@id/label_species"
        app:layout_constraintStart_toEndOf="@id/label_species"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- ORIGIN -->
    <TextView
        android:id="@+id/label_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/origin_label"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/label_species"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/movie_origin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        app:layout_constraintTop_toTopOf="@id/label_origin"
        app:layout_constraintBottom_toBottomOf="@id/label_origin"
        app:layout_constraintStart_toEndOf="@id/label_origin"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- LOCATION -->
    <TextView
        android:id="@+id/label_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_label"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/label_origin"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/movie_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        app:layout_constraintTop_toTopOf="@id/label_location"
        app:layout_constraintBottom_toBottomOf="@id/label_location"
        app:layout_constraintStart_toEndOf="@id/label_location"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- BUTTON -->
    <Button
        android:id="@+id/episodes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_episodes"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/movie_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- EPISODES LOADING -->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/episodes_prog_indicator"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone"
        app:indicatorSize="48dp"
        app:trackThickness="4dp"
        app:indicatorColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/episodes_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>